# Generative-and-Agentic-AI

./: .gitignore  RAG.py  conversational_bot.py  finetune_LoRA.py  finetune_QLoRA.py  finetuning.py  get_wiki_pdfs.py  langGraph_basics.py  langchain_basic.py  langchain_tools.py  llamaindex_basics.py  model_context_protocol.py  ollama_basic.py  pokemon.txt  pyproject.toml  quantization.py  requirements.txt  uv-setup.sh
