[project]
name = "generative-and-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "graphviz>=0.21",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "langsmith>=0.4.10",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "ollama>=0.5.3",
    "pygraphviz>=1.14",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
    "wikipedia>=1.4.0",
]
