[project]
name = "generative-and-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "blobfile>=3.1.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.20",
    "faiss-cpu>=1.12.0",
    "graphviz>=0.21",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "langsmith>=0.4.10",
    "llama-index>=0.14.2",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-langchain>=0.4.1",
    "llama-index-llms-langchain>=0.7.1",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "ollama>=0.5.3",
    "peft>=0.17.1",
    "pygraphviz>=1.14",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "sentencepiece>=0.2.1",
    "streamlit>=1.48.0",
    "trl>=0.23.0",
    "wikipedia>=1.4.0",
]
